tests/snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 2
    name: ext_MUX_indep_multiplexors
    size: 8
    transmitter: ~
    signals:
      - name: muxed_B_1
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: muxed_B_2
        multiplexer_indicator:
          MultiplexedSignal: 2
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: MUX_B
        multiplexer_indicator: Multiplexor
        start_bit: 16
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: muxed_A_0
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: muxed_A_1
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: MUX_A
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
attribute_definitions:
  - Signal:
      - SigType
      - Enum:
          - Default
          - Range
          - RangeSigned
          - ASCII
          - Discrete
          - Control
          - ReferencePGN
          - DTC
          - StringDelimiter
          - StringLength
          - StringLengthControl
  - Signal:
      - GenSigEVName
      - String
  - Signal:
      - GenSigILSupport
      - Enum:
          - "No"
          - "Yes"
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Message:
      - GenMsgFastOnStart
      - Int:
          - Uint: 0
          - Uint: 100000
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTimeFast
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Message:
      - GenMsgNrOfRepetition
      - Int:
          - Uint: 0
          - Uint: 1000000
  - Signal:
      - GenSigStartValue
      - Int:
          - Uint: 0
          - Uint: 10000
  - Message:
      - GenMsgDelayTime
      - Int:
          - Uint: 0
          - Uint: 1000
  - Message:
      - GenMsgILSupport
      - Enum:
          - "No"
          - "Yes"
  - Message:
      - GenMsgStartDelayTime
      - Int:
          - Uint: 0
          - Uint: 100000
  - Node:
      - NodeLayerModules
      - String
  - Node:
      - ECU
      - String
  - Node:
      - NmJ1939SystemInstance
      - Int:
          - Uint: 0
          - Uint: 15
  - Node:
      - NmJ1939System
      - Int:
          - Uint: 0
          - Uint: 127
  - Node:
      - NmJ1939ManufacturerCode
      - Int:
          - Uint: 0
          - Uint: 2047
  - Node:
      - NmJ1939IndustryGroup
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939IdentityNumber
      - Int:
          - Uint: 0
          - Uint: 2097151
  - Node:
      - NmJ1939FunctionInstance
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939Function
      - Int:
          - Uint: 0
          - Uint: 255
  - Node:
      - NmJ1939ECUInstance
      - Int:
          - Uint: 0
          - Uint: 3
  - Node:
      - NmJ1939AAC
      - Int:
          - Uint: 0
          - Uint: 1
  - Node:
      - NmStationAddress
      - Int:
          - Uint: 0
          - Uint: 255
  - Message:
      - GenMsgSendType
      - Enum:
          - cyclic
          - NotUsed
          - IfActive
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - noMsgSendType
  - Message:
      - GenMsgRequestable
      - Int:
          - Uint: 0
          - Uint: 1
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Signal:
      - SPN
      - Int:
          - Uint: 0
          - Uint: 524287
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
  - Plain:
      - ProtocolType
      - String
  - Message:
      - VFrameFormat
      - Enum:
          - StandardCAN
          - ExtendedCAN
          - reserved
          - J1939PG
attribute_defaults:
  - name: SigType
    value:
      String: Default
  - name: GenSigEVName
    value:
      String: Env@Nodename_@Signame
  - name: GenSigILSupport
    value:
      String: "Yes"
  - name: GenSigSendType
    value:
      String: NoSigSendType
  - name: GenMsgFastOnStart
    value:
      Uint: 0
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTimeFast
    value:
      Uint: 0
  - name: GenMsgNrOfRepetition
    value:
      Uint: 0
  - name: GenSigStartValue
    value:
      Uint: 0
  - name: GenMsgDelayTime
    value:
      Uint: 0
  - name: GenMsgILSupport
    value:
      String: "Yes"
  - name: GenMsgStartDelayTime
    value:
      Uint: 0
  - name: NodeLayerModules
    value:
      String: ""
  - name: ECU
    value:
      String: ""
  - name: NmJ1939SystemInstance
    value:
      Uint: 0
  - name: NmJ1939System
    value:
      Uint: 0
  - name: NmJ1939ManufacturerCode
    value:
      Uint: 0
  - name: NmJ1939IndustryGroup
    value:
      Uint: 0
  - name: NmJ1939IdentityNumber
    value:
      Uint: 0
  - name: NmJ1939FunctionInstance
    value:
      Uint: 0
  - name: NmJ1939Function
    value:
      Uint: 0
  - name: NmJ1939ECUInstance
    value:
      Uint: 0
  - name: NmJ1939AAC
    value:
      Uint: 0
  - name: NmStationAddress
    value:
      Uint: 254
  - name: GenMsgSendType
    value:
      String: noMsgSendType
  - name: GenMsgRequestable
    value:
      Uint: 1
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: SPN
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
  - name: ProtocolType
    value:
      String: J1939
  - name: VFrameFormat
    value:
      String: J1939PG
attribute_values_database:
  - name: DBName
    value:
      String: ext_MUX_independent_multiplexors
attribute_values_message:
  - name: VFrameFormat
    message_id:
      Extended: 2
    value:
      Uint: 1
extended_multiplex:
  - message_id:
      Extended: 2
    signal_name: muxed_A_1
    multiplexor_signal_name: MUX_A
    mappings:
      - min_value: 1
        max_value: 1
  - message_id:
      Extended: 2
    signal_name: muxed_A_0
    multiplexor_signal_name: MUX_A
    mappings:
      - min_value: 0
        max_value: 0
  - message_id:
      Extended: 2
    signal_name: muxed_B_2
    multiplexor_signal_name: MUX_B
    mappings:
      - min_value: 2
        max_value: 2
  - message_id:
      Extended: 2
    signal_name: muxed_B_1
    multiplexor_signal_name: MUX_B
    mappings:
      - min_value: 1
        max_value: 1
