tests/snapshots/dbc-cantools/issue_199.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - GMLAN
  - NEO
value_tables:
  - name: GearShifter
    descriptions:
      - id: 3
        description: Park
      - id: 0
        description: Drive/Low
  - name: DriverDoorStatus
    descriptions:
      - id: 1
        description: Opened
      - id: 0
        description: Closed
  - name: LKAGapButton
    descriptions:
      - id: 2
        description: "???"
      - id: 1
        description: "??"
      - id: 0
        description: None
  - name: CruiseButtons
    descriptions:
      - id: 6
        description: Cancel
      - id: 5
        description: Main
      - id: 3
        description: Set
      - id: 2
        description: Resume
      - id: 1
        description: None
  - name: CruiseControlActive
    descriptions:
      - id: 1
        description: Active
      - id: 0
        description: Inactive
  - name: BlinkerStatus
    descriptions:
      - id: 1
        description: Active
      - id: 0
        description: Inactive
messages:
  - id:
      Standard: 0
    name: DriverDoorStatus
    size: 1
    transmitter: GMLAN
    signals:
      - name: DriverDoorOpened
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 0
    name: Chime
    size: 5
    transmitter: NEO
    signals:
      - name: ChimeType
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
      - name: ChimeRepeat
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
      - name: ChimeDuration
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
      - name: ChimeByte5
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
      - name: ChimeByte4
        multiplexer_indicator: Plain
        start_bit: 31
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
  - id:
      Standard: 49152
    name: BlinkerStatus
    size: 5
    transmitter: GMLAN
    signals:
      - name: RightBlinker
        multiplexer_indicator: Plain
        start_bit: 6
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - NEO
      - name: LeftBlinker
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - NEO
      - name: BlinkerLight
        multiplexer_indicator: Plain
        start_bit: 25
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 0
    name: SteeringWheelAngle
    size: 8
    transmitter: GMLAN
    signals:
      - name: SteeringWheelAngle
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 0.0625
        offset: 0
        min:
          Int: -540
        max:
          Uint: 540
        unit: deg
        receivers:
          - NEO
  - id:
      Standard: 49152
    name: GearShifter
    size: 8
    transmitter: GMLAN
    signals:
      - name: GearShifter
        multiplexer_indicator: Plain
        start_bit: 17
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 40960
    name: GasPedalRegenCruise
    size: 8
    transmitter: GMLAN
    signals:
      - name: CruiseControlActive
        multiplexer_indicator: Plain
        start_bit: 56
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - GMLAN
      - name: MaxRegen
        multiplexer_indicator: Plain
        start_bit: 12
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
        receivers:
          - GMLAN
          - NEO
      - name: GasPedal
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 254
        unit: ""
        receivers:
          - GMLAN
          - NEO
      - name: GearShifter2NotUsed
        multiplexer_indicator: Plain
        start_bit: 55
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 255
        unit: ""
        receivers:
          - GMLAN
          - NEO
  - id:
      Standard: 0
    name: BrakePedal
    size: 2
    transmitter: GMLAN
    signals:
      - name: BrakeLevel
        multiplexer_indicator: Plain
        start_bit: 2
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 3
        unit: ""
        receivers:
          - NEO
      - name: BrakeSensor
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 255
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 32768
    name: WheelSpeed
    size: 8
    transmitter: GMLAN
    signals:
      - name: WheelSpeedFL
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 70
        unit: yd/s
        receivers:
          - NEO
      - name: WheelSpeedFR
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 70
        unit: yd/s
        receivers:
          - NEO
      - name: WheelSpeedRL
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 70
        unit: yd/s
        receivers:
          - NEO
      - name: WheelSpeedRR
        multiplexer_indicator: Plain
        start_bit: 55
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 70
        unit: yd/s
        receivers:
          - NEO
  - id:
      Standard: 0
    name: VehicleSpeed
    size: 8
    transmitter: GMLAN
    signals:
      - name: VehicleSpeed1
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 100
        unit: mph
        receivers:
          - NEO
      - name: VehicleSpeed2
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 100
        unit: mph
        receivers:
          - NEO
  - id:
      Standard: 32768
    name: CruiseButtons
    size: 3
    transmitter: GMLAN
    signals:
      - name: CruiseButtons
        multiplexer_indicator: Plain
        start_bit: 3
        size: 3
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 12
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 24576
    name: CruiseButtons2
    size: 1
    transmitter: GMLAN
    signals:
      - name: LKAGapButton
        multiplexer_indicator: Plain
        start_bit: 1
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 2
        unit: ""
        receivers:
          - NEO
attribute_definitions:
  - Plain:
      - UseGMParameterIDs
      - Int:
          - Uint: 0
          - Uint: 0
  - Plain:
      - ProtocolType
      - String
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: UseGMParameterIDs
    value:
      Uint: 1
  - name: ProtocolType
    value:
      String: GMLAN
  - name: BusType
    value:
      String: ""
attribute_values_database:
  - name: BusType
    value:
      String: CAN
  - name: ProtocolType
    value:
      String: GMLAN
value_descriptions:
  - Signal:
      message_id:
        Standard: 0
      name: DriverDoorOpened
      value_descriptions:
        - id: 1
          description: Opened
        - id: 0
          description: Closed
  - Signal:
      message_id:
        Standard: 49152
      name: RightBlinker
      value_descriptions:
        - id: 1
          description: Active
        - id: 0
          description: Inactive
  - Signal:
      message_id:
        Standard: 49152
      name: LeftBlinker
      value_descriptions:
        - id: 1
          description: Active
        - id: 0
          description: Inactive
  - Signal:
      message_id:
        Standard: 49152
      name: BlinkerLight
      value_descriptions:
        - id: 1
          description: Active
        - id: 0
          description: Inactive
  - Signal:
      message_id:
        Standard: 49152
      name: GearShifter
      value_descriptions:
        - id: 3
          description: Park
        - id: 0
          description: Drive/Low
  - Signal:
      message_id:
        Standard: 40960
      name: CruiseControlActive
      value_descriptions:
        - id: 1
          description: Active
        - id: 0
          description: Inactive
  - Signal:
      message_id:
        Standard: 32768
      name: CruiseButtons
      value_descriptions:
        - id: 6
          description: Cancel
        - id: 5
          description: Main
        - id: 3
          description: Set
        - id: 2
          description: Resume
        - id: 1
          description: None
  - Signal:
      message_id:
        Standard: 24576
      name: LKAGapButton
      value_descriptions:
        - id: 2
          description: "???"
        - id: 1
          description: "??"
        - id: 0
          description: None
